<resources>

    <!-- General -->
    <string name="app_name">AgriCircle</string>


    <!-- Login page -->
    <string name="login">Login</string>
    <string name="login_seperated">Log in</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_bad_info">Error: Bad e-mail or password</string>


    <!-- Navigation screen -->
    <string name="title_activity_map">MapActivity</string>
    <string name="title_map">Map</string>
    <string name="title_sampling">Sampling</string>
    <string name="title_workspace">Workspace</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <!-- Settings screen -->
    <string name="log_out">Log out</string>
    <string name="unit_preferences">Unit Preferences</string>
    <string name="more_settings">More settings</string>
    <string name="john_doe">John Doe</string>
    <string name="map_preferences">Map preferences</string>
    <string name="some_setting">Some setting</string>
    <string name="userimage">UserImage</string>


    <!-- Map screen-->
    <string name="field_name_textview">Field Name</string>
    <string name="field_size_textview">Field size (ha)</string>
    <string name="creating_field_textview">Creating Field</string>
    <string name="map_fab_cancel">Cancel</string>
    <string name="map_fab_add_point">Add point</string>
    <string name="map_hectare">ha</string>
    <string name="map_dialog_title">Field properties</string>
    <string name="map_dialog_hint_name">Field name</string>
    <string name="map_dialog_hint_id">Field ID</string>
    <string name="map_dialog_field_name_preset">Newly created field</string>


    <!-- Sampling screen-->
    <string name="sampling_position_clicked">You clicked on Position</string>
    <string name="sampling_field_clicked">You clicked on Field</string>
    <string name="sampling_campus_ballerup">Campus Ballerup</string>


    <!-- Sampling Parameters screen -->
    <string name="min_zone_size">Min. zone size</string>
    <string name="samples_per_zone">Samples per zone</string>
    <string name="zones_to_sample">Zones to sample</string>
    <string name="confirm">Confirm</string>
    <string name="sampling_sampling_parameters">Sampling parameters</string>
    <string name="sampling_0">0</string>
    <string name="sampling_20">20</string>
    <string name="sampling_5">5</string>


    <!-- Driving screen -->
    <string name="kilometerhour">km/h</string>
    <string name="placeholder_time">-- TIME --</string>
    <string name="placeholder_your_speed">Your speed</string>
    <string name="placeholder_0_km_h">0 km/h</string>
    <string name="placeholder_suggested_speed">Suggested speed</string>
    <string name="placeholder_100_km_h">100 km/h</string>
    <string name="driving_start">Start</string>
    <string name="driving_pause">Pause</string>
    <string name="intent_extra_field_activity">fieldactivity</string>
    <string name="intent_extra_field_id">fieldid</string>


    <!-- Workspace screen-->
    <string name="workspace">Workspace</string>


    <!-- Workspace list item-->
    <string name="placeholder_field_name">field name</string>
    <string name="placeholder_field_activity">field activity</string>


    <!-- Sort later -->
    <string name="logo">logo</string>


    <!-- Placeholders -->
    <string name="placeholder_sowing">Sowing</string>
    <string name="placeholder_Fertilization">Fertilization</string>
    <string name="placeholder_product_x">Product X</string>
    <string name="placeholder_product_y">Product Y</string>


    <!-- Shared Prefs -->
    <string name="settings_map_type_preference">settingsmaptypepreference</string>
    <string name="map_type_hybrid">maptypehybrid</string>
    <string name="map_type_terrain">maptypeterrain</string>
    <string name="map_type_satellite">maptypesatellite</string>
    <string name="map_type_none">maptypenone</string>


    <!-- FAB Menu -->
    <string name="menu_item_position">My position</string>
    <string name="menu_item_create_field">Create field</string>
    <string name="menu_item_find_field">Find field</string>


    <!-- Inside code (Backend) -->
    <string name="backend_data">data</string>
    <string name="backend_user">user</string>
    <string name="backend_login">login</string>
    <string name="backend_cookie">cookie</string>
    <string name="backend_name">name</string>
    <string name="backend_language">language</string>
    <string name="backend_avatar_url">avatarUrl</string>
    <string name="backend_planning_years">planningYears</string>
    <string name="backend_decimal_separator">decimalSeparator</string>
    <string name="backend_date_format">dateFormat</string>
    <string name="backend_slug">slug</string>
    <string name="backend_features">features</string>
    <string name="backend_typename">__typename</string>
    <string name="backend_agricircle_subdomain_session">_AgriCircle_subdomain_session</string>
    <string name="backend_header_x_cookie">x-cookie</string>
    <string name="backend_field">fields</string>
    <string name="backend_id">id</string>
    <string name="backend_company_id">company_id</string>
    <string name="backend_layer_type">layer_type</string>
    <string name="backend_shape">shape</string>
    <string name="backend_type">type</string>
    <string name="backend_coordinates">coordinates</string>
    <string name="backend_surface">surface</string>
    <string name="backend_active_crop_name">active_crop_name</string>
    <string name="backend_active_crop_image_url">active_crop_image_url</string>
    <string name="backend_center_point">center_point</string>
    <string name="backend_companies">companies</string>
    <string name="backend_location">location</string>
    <string name="backend_default">default</string>
    <string name="backend_owner_photo_url">owner_photo_url</string>
    <string name="backend_access">access</string>

    <string name="http_header_content_type">Content-Type</string>
    <string name="http_header_content_type_value_application_json">application/json</string>
    <string name="http_header_accept">Accept</string>
    <string name="http_header_accept_value_star">*/*</string>

    <string name="localbackend_upload_field_preset_layertype">field</string>
    <string name="localbackend_upload_field_preset_shapetype">point</string>
    <string name="localbackend_upload_field_preset_activecrop"></string>
    <string name="localbackend_upload_field_preset_activecrop_url"></string>


    <!-- Error Messages -->
    <string name="not_implemented_yet">Not implemented yet.</string>
    <string name="sign_up_button_go_to_website">To sign up, please visit:\nhttps://www.AgriCircle.com</string>
    <string name="user_declined_location_permission">In order to fully utilize this application, permission to read your location is required.</string>


    <!-- Spinner arrays -->
    <string-array name="map_pref_array">
        <item>Hybrid</item>
        <item>Terrain</item>
        <item>Satellite</item>
    </string-array>

    <string-array name="unit_pref_array">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

</resources>
